--- a/范畴论/category theory.tex
+++ b/范畴论/category theory.tex
@@ -454,7 +454,7 @@ $B$ \emph{同构}，记作 $A\cong B$。
   \begin{arr}
     \cat A\arrow[r,yshift=2pt,"F"]\arrow[r,yshift=-2pt,"G"'] & \cat B
   \end{arr}
-  是函子。一个\emph{自然变换} $\alpha:F\to G$ 指的是 $\cat B$ 中的一族态射
+  是函子。一个\emph{自然变换} $\alpha:F\Rightarrow  G$ 指的是 $\cat B$ 中的一族态射
   $\left(
     \begin{tikzcd}[sep=small,cramped]
       F(\cat A)\arrow[r,"\alpha_A"] & G(A)
@@ -471,7 +471,9 @@ $B$ \emph{同构}，记作 $A\cong B$。
   \]
 \end{definition}
 
-
+\begin{example}
+  
+\end{example}
 
 
 
