--- a/Smooth Manifolds/Smooth Manifolds.tex
+++ b/Smooth Manifolds/Smooth Manifolds.tex
@@ -52,6 +52,7 @@
 \DeclareMathOperator\rk{rank}
 \DeclareMathOperator\grad{grad}
 \DeclareMathOperator\Euc{E}
+\DeclareMathOperator\spn{span}
 \DeclareMathOperator\dive{div}
 \DeclareMathOperator\curl{curl}
 \newcommand{\LL}{{\mathrm{L}}}
