--- a/Smooth Manifolds/Smooth Manifolds.tex
+++ b/Smooth Manifolds/Smooth Manifolds.tex
@@ -115,7 +115,7 @@
 
 \include{chapters/ch14/orientations}
 
-%\include{chapters/ch15/integration on manifolds}
+\include{chapters/ch15/integration on manifolds}
 
 \chapter{指数映射}
 
