--- a/Probability and Stochastics/Probability and Stochastics.tex
+++ b/Probability and Stochastics/Probability and Stochastics.tex
@@ -47,6 +47,7 @@
 \DeclareMathOperator\var{var}
 \DeclareMathOperator\card{card}
 \DeclareMathOperator\coker{coker}
+\DeclareMathOperator\vol{vol}
 \undef\Re
 \undef\Im 
 \DeclareMathOperator\Re{Re}
